vlib/v/parser/tests/fn_type_decl_same_return_type.vv
type FnType = fn (string) FnType
